<resources>
    <string name="app_name">Dr Galal Kids Clinic</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="cancel">Cancel</string>
    <string name="login2">Login</string>
    <string name="ask_doctor">Ask Doctor</string>
    <string name="type_amessage">Type Message</string>
    <string name="notifications">Notifications</string>
    <string name="no_data_to_show">No Data To Show</string>
    <string name="instructions">Instructions</string>
    <string name="field_req">Field Required</string>
    <string name="wait">Wait</string>
    <string name="clinic_system">Clinic System</string>
    <string name="book_appoinment">Book Appoinment</string>
    <string name="incorrect_user">Incorrect Name  Or Pass</string>
    <string name="choose_the_right_day">Choose the right day</string>
    <string name="name">Name</string>
    <string name="history">History</string>
    <string name="ch">Choose USer</string>
    <string name="profile">Profile</string>
    <string name="basic_information">basic information</string>
    <string name="age">Age</string>
    <string name="filenumber">FileNumber</string>
    <string name="birthday">BirthDay</string>
    <string name="last_clinic_visit">Last Clinic Visit</string>
    <string name="booking_time">Booking Time</string>
    <string name="entering_the_clinic">Entering the clinic</string>
    <string name="entering_the_doctor">Entering the doctor</string>
    <string name="waiting_time">ًWaiting Time</string>
    <string name="hight">Hight</string>
    <string name="weight">Weight</string>
    <string name="head_circumference">Head circumference</string>
    <string name="prescribe_the_treatment">Prescribe the treatment</string>
    <string name="medicament_name">medicament name</string>
    <string name="dose">dose</string>
</resources>